--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
 <body>
   <h3 id="world">Hello, World</h3>
   <h3 id="friend">Hello, Friend</h3>
-  <button onclick="changeWord()">클릭</button>
+  점수:<input id="user_value" value="100">
+  <button onclick="changeValue()">클릭</button>
   <!-- <p>Test</p> -->
   <script src="js/index.js"></script>
   <script src="js/condition.js"></script>
