조건문 완료

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,18 @@
   점수:<input id="user_value" value="100">
   <button onclick="changeValue()">클릭</button>
   <!-- <p>Test</p> -->
+  <div></div>
+  값1: <input type="number" id="user1" value="0">
+  <select onchange="calculate()" name="" id="oper">
+    <option value="+">+</option>
+    <option value="-">-</option>
+    <option value="*">*</option>
+    <option value="/">/</option>
+  </select>
+  값2: <input type="number" id="user2" value="0">
+  <span>=></span>
+  결과: <input type="number" id="result" value="0">
+
   <script src="js/index.js"></script>
   <script src="js/condition.js"></script>
 </body>
