--- a/public/js/1st/index.html
+++ b/public/js/1st/index.html
@@ -31,7 +31,7 @@
   결과: <input type="number" id="result" value="0">
 
   <script src="js/index.js"></script>
-  <script src="js/condition.js"></script>
+  <script src="js/1st/condition.js"></script>
 </body>
 
 </html>
