반복문 완료

--- a/public/js/1st/index.html
+++ b/public/js/1st/index.html
@@ -30,8 +30,8 @@
   <span>=></span>
   결과: <input type="number" id="result" value="0">
 
-  <script src="js/index.js"></script>
-  <script src="js/1st/condition.js"></script>
+  <script src="./index.js"></script>
+  <script src="./condition.js"></script>
 </body>
 
 </html>
