--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h3>오늘은 반복문, 함수, 이벤트</h3>
-  <script src="./js/2nd/function.js"></script>
+  <script src="./js/2nd/todo.js"></script>
 </body>
 
 </html>
