배열, 메소드, DOM

--- a/public/index.html
+++ b/public/index.html
@@ -13,49 +13,18 @@
 </head>
 
 <body>
-  <h3>2일차: 반복문, 함수</h3>
-  <h3>3일차: 이벤트, DOM </h3>
-
-  <div id="student">
-    <table class="table">
-      <tbody>
-        <tr>
-          <th>학생번호</th>
-          <td><input type="text" id="student_no"></td>
-        </tr>
-        <tr>
-          <th>학생이름</th>
-          <td><input type="text" id="student_name"></td>
-        </tr>
-        <tr>
-          <th>점수</th>
-          <td><input type="number" id="score"></td>
-        </tr>
-        <tr>
-          <td colspan="2" align="center">
-            <button id="addBtn" class="btn btn-primary">등록</button>
-            <button class="addBtn btn btn-secondary">수정</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div id="list">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>학생번호</th>
-          <th>이름</th>
-          <th>점수</th>
-          <th>삭제</th>
-        </tr>
-      </thead>
-      <tbody> </tbody>
-    </table>
-  </div>
-
-  <script src="./js/3rd/dom.js"></script>
+  <a href='./js/1st/index.html'>
+    <h3>1일차: 변수, 연산자</h3>
+  </a>
+  <a href='./js/2nd/index.html'>
+    <h3>2일차: 반복문, 함수</h3>
+  </a>
+  <a href='./js/3rd/index.html'>
+    <h3>3일차: 이벤트, DOM </h3>
+  </a>
+  <a href='./js/4th/index.html'>
+    <h3>4일차: 객체, 메소드 </h3>
+  </a>
 </body>
 
 </html>
