--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
   <a href='./js/4th/index.html'>
     <h3>4일차: 객체, 메소드 </h3>
   </a>
+  <a href='./js/5th/index.html'>
+    <h3>5일차: JSON, 메소드 </h3>
+  </a>
 </body>
 
 </html>
