--- a/public/js/5th/index.html
+++ b/public/js/5th/index.html
@@ -22,7 +22,7 @@
     </thead>
     <tbody id="list"></tbody>
   </table>
-  <script src="./json.js"></script>
+  <script src="./this.js"></script>
 </body>
 
 </html>
