--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
   <a href='./js/5th/index.html'>
     <h3>5일차: JSON, 메소드 </h3>
   </a>
+  <a href='./js/6th/index.html'>
+    <h3>6일차: 문자열, 배열 메소드 </h3>
+  </a>
 </body>
 
 </html>
