--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>2일차</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>2일차</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
-  </script>
-</head>
-
-<body>
-  <a href='./js/1st/index.html'>
-    <h3>1일차: 변수, 연산자</h3>
-  </a>
-  <a href='./js/2nd/index.html'>
-    <h3>2일차: 반복문, 함수</h3>
-  </a>
-  <a href='./js/3rd/index.html'>
-    <h3>3일차: 이벤트, DOM </h3>
-  </a>
-  <a href='./js/4th/index.html'>
-    <h3>4일차: 객체, 메소드 </h3>
-  </a>
-  <a href='./js/5th/index.html'>
-    <h3>5일차: JSON, 메소드 </h3>
-  </a>
-  <a href='./js/6th/index.html'>
-    <h3>6일차: 문자열, 배열 메소드 </h3>
-  </a>
-</body>
-
+  <body>
+    <a href="./js/1st/index.html">
+      <h3>1일차: 변수, 연산자</h3>
+    </a>
+    <a href="./js/2nd/index.html">
+      <h3>2일차: 반복문, 함수</h3>
+    </a>
+    <a href="./js/3rd/index.html">
+      <h3>3일차: 이벤트, DOM</h3>
+    </a>
+    <a href="./js/4th/index.html">
+      <h3>4일차: 객체, 메소드</h3>
+    </a>
+    <a href="./js/5th/index.html">
+      <h3>5일차: JSON, 메소드</h3>
+    </a>
+    <a href="./js/6th/index.html">
+      <h3>6일차: 문자열, 배열 메소드</h3>
+    </a>
+  </body>
 </html>
