배열메소드

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,8 @@
     <a href="./js/6th/index.html">
       <h3>6일차: 문자열, 배열 메소드</h3>
     </a>
+    <a href="./js/7th/index.html">
+      <h3>7일차: Promise, fetch</h3>
+    </a>
   </body>
 </html>
