--- a/public/js/6th/index.html
+++ b/public/js/6th/index.html
@@ -8,6 +8,6 @@
 
   <body>
     <h3>문자열, 배열 메소드</h3>
-    <script src="string.js"></script>
+    <script src="array3.js"></script>
   </body>
 </html>
